--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
 
-FINANCIAL_DB_URL=postgresql://postgres:shrujan%402004@localhost:5432/postgres
+FINANCIAL_DB_URL=postgresql://financial_user:R7N2VIoQeOxHpTKqkITPqVx3yIeknlYB@dpg-d62mrim8alac738ivm20-a/financial_health
 
