--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
 
 FINANCIAL_DB_URL=postgresql://financial_user:R7N2VIoQeOxHpTKqkITPqVx3yIeknlYB@dpg-d62mrim8alac738ivm20-a/financial_health
-
+VITE_API_URL=https://financial-health-assessment-tool-7e7q.onrender.com
