--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,5 @@
 
-FINANCIAL_DB_URL=postgresql://financial_user:R7N2VIoQeOxHpTKqkITPqVx3yIeknlYB@dpg-d62mrim8alac738ivm20-a/financial_health
+FINANCIAL_DB_URL=postgresql://postgres:shrujan%402004@localhost:5432/postgres
 VITE_API_URL=https://financial-health-assessment-tool-7e7q.onrender.com
+
+
